modules/wycs/tests/valid/test_set_34.wyal
assert:
    forall({int} xs, {int} ys, {int} zs):
        if:
            xs ⊆ zs
            ys ⊆ zs
        then:
            xs ∪ ys ⊆ zs
