modules/wycs/tests/invalid/test_055.wyal
assert:
  forall({int} xs, {int} ys):
    if:
       xs ⊆ ys
       ys ⊆ xs
    then:
       xs != ys